--- a/app/src/main/res/layout/fragment_titulka.xml
+++ b/app/src/main/res/layout/fragment_titulka.xml
@@ -23,14 +23,16 @@
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/playButton"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="480dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="540dp"
+                android:layout_marginEnd="16dp"
                 android:backgroundTint="@color/buttony"
                 android:elevation="20dp"
                 android:text="@string/play_buttoon"
                 android:textColor="?android:textColorSecondary"
-                app:cornerRadius="10dp"
+                app:cornerRadius="20dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.498"
                 app:layout_constraintStart_toStartOf="parent"
@@ -51,16 +53,6 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/playButton" />
 
-            <ImageView
-                android:id="@+id/imageView"
-                android:layout_width="307dp"
-                android:layout_height="626dp"
-                android:layout_marginTop="16dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/titulkaTextView"
-                app:srcCompat="@drawable/uzol" />
-
             <TextView
                 android:id="@+id/titulkaTextView"
                 android:layout_width="wrap_content"
@@ -75,6 +67,26 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:text="@string/app_name" />
+
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="30dp"
+                android:layout_height="43dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="16dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/gear" />
+
+            <ImageView
+                android:id="@+id/scoreIcon"
+                android:layout_width="40dp"
+                android:layout_height="60dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="64dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/trophy" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
