--- a/app/src/main/res/layout/activity_titulka.xml
+++ b/app/src/main/res/layout/activity_titulka.xml
@@ -3,7 +3,8 @@
 
 <layout xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@drawable/background2">
 
     <data>
 
@@ -12,6 +13,7 @@
         android:id="@+id/fragment_container"
         android:layout_height="wrap_content"
         android:layout_width="match_parent" >
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -41,9 +43,11 @@
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/menuDoSkoreButton"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
                 android:layout_marginTop="24dp"
+                android:layout_marginEnd="16dp"
                 android:backgroundTint="@color/buttony"
                 android:elevation="20dp"
                 android:text="@string/skore_button"
@@ -58,13 +62,14 @@
                 android:id="@+id/titulkaTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="292dp"
                 android:fontFamily="sans-serif-black"
                 android:text="@string/app_name"
                 android:textColor="?android:textColorPrimary"
                 android:textSize="24sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.498"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:text="@string/app_name" />
